# goalless-agents

./: .gitignore  Makefile  README.md  experiment.sh  models.txt  prompt1.txt  prompt2.txt  prompt3.txt  prompt4.txt  prompt5.txt  run.sh
papers/: .gitignore  Makefile  paper.tex  refs.bib
results1/: RESULTS.md
results1/claude/claude-haiku-4.5/run-01/: log.txt  meta.md  output.json
results1/claude/claude-haiku-4.5/run-02/: log.txt  meta.md  output.json
results1/claude/claude-haiku-4.5/run-03/: log.txt  meta.md
results1/claude/claude-haiku-4.5/run-04/: log.txt  meta.md
results1/claude/claude-haiku-4.5/run-04/workspace/: .gitignore  README.md  pyproject.toml
results1/claude/claude-haiku-4.5/run-04/workspace/tests/: __init__.py  test_models.py  test_storage.py
results1/claude/claude-haiku-4.5/run-04/workspace/token_dashboard/: __init__.py  cli.py  models.py  storage.py
results1/claude/claude-haiku-4.5/run-05/: log.txt  meta.md
results1/claude/claude-opus-4.5/run-01/: log.txt  meta.md  output.json
results1/claude/claude-opus-4.5/run-02/: log.txt  meta.md  output.json
results1/claude/claude-opus-4.5/run-03/: log.txt  meta.md
results1/claude/claude-opus-4.5/run-04/: log.txt  meta.md
results1/claude/claude-opus-4.5/run-04/workspace/git-dash/: README.md  git_dash.py  pyproject.toml
results1/claude/claude-opus-4.5/run-05/: log.txt  meta.md
results1/claude/claude-opus-4.6/run-01/: log.txt  meta.md  output.json
results1/claude/claude-opus-4.6/run-02/: log.txt  meta.md  output.json
results1/claude/claude-opus-4.6/run-03/: log.txt  meta.md
results1/claude/claude-opus-4.6/run-04/: log.txt  meta.md
results1/claude/claude-opus-4.6/run-05/: log.txt  meta.md
results1/claude/claude-sonnet-4.5/run-01/: log.txt  meta.md  output.json
results1/claude/claude-sonnet-4.5/run-02/: log.txt  meta.md  output.json
results1/claude/claude-sonnet-4.5/run-03/: log.txt  meta.md
results1/claude/claude-sonnet-4.5/run-04/: log.txt  meta.md
results1/claude/claude-sonnet-4.5/run-05/: log.txt  meta.md
results1/claude/claude-sonnet-4.6/run-01/: log.txt  meta.md  output.json
results1/claude/claude-sonnet-4.6/run-02/: log.txt  meta.md  output.json
results1/claude/claude-sonnet-4.6/run-02/workspace/devpulse/: README.md  pyproject.toml
results1/claude/claude-sonnet-4.6/run-02/workspace/devpulse/devpulse/: __init__.py  __main__.py  churn.py  git.py  heatmap.py  render.py  stats.py
results1/claude/claude-sonnet-4.6/run-03/: log.txt  meta.md
results1/claude/claude-sonnet-4.6/run-04/: log.txt  meta.md
results1/claude/claude-sonnet-4.6/run-05/: log.txt  meta.md
results1/claude/claude-sonnet-4.6/run-05/workspace/: pyproject.toml
results1/claude/claude-sonnet-4.6/run-05/workspace/gitdigest/: __init__.py  cli.py  digest.py  git.py
results1/claude/claude-sonnet-4.6/run-05/workspace/gitdigest.egg-info/: PKG-INFO  SOURCES.txt
results1/claude/gemini-2.0-flash/run-01/: log.txt  meta.md  output.json
results1/claude/gemini-2.0-flash/run-02/: log.txt  meta.md  output.json
results1/claude/gemini-2.0-flash/run-03/: log.txt  meta.md
results1/claude/gemini-2.0-flash/run-04/: log.txt  meta.md
results1/claude/gemini-2.0-flash/run-05/: log.txt  meta.md
results1/claude/gemini-2.5-pro/run-01/: log.txt  meta.md  output.json
results1/claude/gemini-2.5-pro/run-02/: log.txt  meta.md  output.json
results1/claude/gemini-2.5-pro/run-03/: log.txt  meta.md
results1/claude/gemini-2.5-pro/run-04/: log.txt  meta.md
results1/claude/gemini-2.5-pro/run-05/: log.txt  meta.md
results2/: RESULTS.md
results3/: RESULTS.md
results3/claude/claude-opus-4-5/run-03/workspace/: README.md  pyproject.toml
results3/claude/claude-opus-4-5/run-03/workspace/snip/: __init__.py  cli.py  core.py  display.py
results3/claude/gpt-5-mini/run-01/workspace/: MEMORY.md  README.md  pyproject.toml
results3/claude/gpt-5-mini/run-01/workspace/.github/workflows/: ci.yml
results3/claude/gpt-5-mini/run-01/workspace/memory/: user_role.md
results3/claude/gpt-5-mini/run-01/workspace/src/projman/: cli.py
results3/claude/gpt-5-mini/run-01/workspace/tests/: test_cli.py
results3/claude/gpt-5-mini/run-03/workspace/: MEMORY.md  README.md  pyproject.toml  todo.txt
results3/claude/gpt-5-mini/run-03/workspace/.github/workflows/: ci.yml
results3/claude/gpt-5-mini/run-03/workspace/src/: __init__.py  cli.py
results3/claude/gpt-5-mini/run-03/workspace/tests/: test_cli.py  test_cli_caps.py  test_cli_version.py
results3/codex/gpt-4.1/run-04/workspace/: .gitignore  README.md  pyproject.toml
results3/codex/gpt-4.1/run-04/workspace/src/: main.py
results3/codex/gpt-4.1/run-04/workspace/tests/: test_main.py
results3/codex/gpt-5.1/run-01/workspace/: README.md  pyproject.toml
results3/codex/gpt-5.1/run-01/workspace/src/miniwc/: __init__.py  cli.py  core.py
results3/codex/gpt-5.1/run-01/workspace/tests/: test_cli.py  test_core.py
results3/codex/gpt-5.1/run-03/workspace/: README.md  pyproject.toml
results3/codex/gpt-5.1/run-03/workspace/commitlint/: __init__.py  cli.py  core.py
results4/: RESULTS.md
results5/: RESULTS.md
results6/: RESULTS.md
results7/: RESULTS.md
(+1412 files in other folders)
