[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "gitdigest"
version = "0.1.0"
description = "AI-powered git repository digest generator using Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[project.scripts]
gitdigest = "gitdigest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitdigest*"]
