[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projman"
version = "0.1.0"
description = "Small CLI scaffolded by Claude Code"
authors = [{name = "claude-code-assistant"}]
requires-python = ">=3.8"

[tool.pytest.ini_options]
minversion = "6.0"
