[project]
name = "miniwc"
version = "0.1.0"
description = "A tiny wc-like CLI to count lines, words, and bytes in files or stdin."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
miniwc = "miniwc.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

