[project]
name = "git-dash"
version = "0.1.0"
description = "Compact git repository dashboard for token-efficient output"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Developer" }]
keywords = ["git", "cli", "dashboard", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
git-dash = "git_dash:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["git_dash"]
