[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "devpulse"
version = "0.1.0"
description = "Git repository analytics dashboard — commit heatmaps, file churn, contributor stats"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["git", "analytics", "dashboard", "cli", "developer-tools"]

[project.scripts]
devpulse = "devpulse.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devpulse*"]
